--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,9 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"]
+            "styles": ["src/styles.scss"],
+            "codeCoverage": true,
+            "codeCoverageExclude": ["src/app/api-client/**"]
           }
         }
       }
