Update missing / broken unit test

--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,7 @@
             ],
             "styles": ["src/styles.scss"],
             "codeCoverage": true,
-            "codeCoverageExclude": ["src/app/api-client/**"]
+            "codeCoverageExclude": ["src/app/api-client/**", "src/app/core/facades/**"]
           }
         }
       }
